tests/invalid/trait/deriving_syntax_deferred.facet
trait Show {
  fn show(self: Self) -> unrestricted isize;
}

struct Token deriving Show {
  value: unrestricted isize
}

fn main() -> unrestricted isize {
  0
}
